--- a/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
+++ b/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
@@ -266,9 +266,10 @@
     <Compile Include="DataEditors\EntityPicker\EntityPickerConfigurationEditor.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerDataEditor.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerConfigurationEditor.cs" />
-    <Compile Include="DataEditors\MacroPicker\MacroPickerDataValueEditor.cs" />
+    <Compile Include="DataEditors\HideLabelDataValueEditor.cs" />
+    <Compile Include="DataEditors\Notes\NotesDataEditor.cs" />
+    <Compile Include="DataEditors\Notes\NotesConfigurationEditor.cs" />
     <Compile Include="DataEditors\RenderMacro\RenderMacroConfigurationEditor.cs" />
-    <Compile Include="DataEditors\RenderMacro\RenderMacroDataValueEditor.cs" />
     <Compile Include="DataEditors\RenderMacro\RenderMacroDataEditor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataEditors\Checkbox\CheckboxValueConverter.cs" />
@@ -279,6 +280,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Web\UI\App_Plugins\Contentment\data-editors\notes.html" />
     <Content Include="Web\UI\App_Plugins\Contentment\data-editors\dropdown.js" />
     <Content Include="Web\UI\App_Plugins\Contentment\data-editors\dropdown.html" />
     <Content Include="Web\UI\App_Plugins\Contentment\data-editors\entity-picker.html" />
@@ -300,7 +302,7 @@
   </Target>
   <PropertyGroup>
     <PostBuildEvent>IF EXIST "$(SolutionDir)PostBuildEvents.bat" (
-$(SolutionDir)PostBuildEvents.bat  $(TargetPath) $(TargetDir) $(ProjectName) $(ProjectDir)
+$(SolutionDir)PostBuildEvents.bat  $(TargetPath) $(TargetDir) $(ProjectName) $(ProjectDir) $(ConfigurationName)
 )</PostBuildEvent>
   </PropertyGroup>
 </Project>
