--- a/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
+++ b/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
@@ -262,16 +262,21 @@
     <Compile Include="DataEditors\Checkbox\CheckboxDataValueEditor.cs" />
     <Compile Include="DataEditors\ConfigurationFieldExtensions.cs" />
     <Compile Include="DataEditors\DataTable\DataTableConfigurationEditor.cs" />
+    <Compile Include="DataEditors\Dropdown\DropdownValueConverter.cs" />
     <Compile Include="DataEditors\Dropdown\DropdownConfigurationEditor.cs" />
     <Compile Include="DataEditors\Dropdown\DropdownDataEditor.cs" />
     <Compile Include="DataEditors\EntityPicker\EntityPickerDataEditor.cs" />
     <Compile Include="DataEditors\EntityPicker\EntityPickerConfigurationEditor.cs" />
+    <Compile Include="DataEditors\EntityPicker\EntityPickerValueConverter.cs" />
+    <Compile Include="DataEditors\MacroPicker\MacroPickerValueConverter.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerDataEditor.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerConfigurationEditor.cs" />
     <Compile Include="DataEditors\HideLabelDataValueEditor.cs" />
     <Compile Include="DataEditors\Notes\NotesDataEditor.cs" />
     <Compile Include="DataEditors\Notes\NotesConfigurationEditor.cs" />
     <Compile Include="DataEditors\DataTable\DataTableDataEditor.cs" />
+    <Compile Include="DataEditors\Notes\NotesValueConverter.cs" />
+    <Compile Include="DataEditors\RenderMacro\RenderMacroValueConverter.cs" />
     <Compile Include="DataEditors\RenderMacro\RenderMacroConfigurationEditor.cs" />
     <Compile Include="DataEditors\RenderMacro\RenderMacroDataEditor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
