Removed UmbracoEntityPicker editor
Now I have an ItemPicker editor, I've created an UmbracoEntity datasource,
which has effectively replaced the UmbracoEntityPicker editor.

Less code, less docs, less maintenance!

--- a/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
+++ b/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
@@ -278,6 +278,7 @@
     <Compile Include="DataEditors\DataList\DataSources\ManualDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\EnumDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\JsonDataListSource.cs" />
+    <Compile Include="DataEditors\DataList\DataSources\UmbracoEntityDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\XmlDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\SqlDataListSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\IDataListSource.cs" />
@@ -295,14 +296,9 @@
     <Compile Include="DataEditors\IconPicker\IconPickerConfigurationEditor.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerConfigurationEditor.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerDataEditor.cs" />
-    <Compile Include="DataEditors\ItemPicker\ItemPickerModel.cs" />
+    <Compile Include="DataEditors\DataList\DataListItemModel.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPicker-Constants.cs" />
     <Compile Include="DataEditors\RadioButtonList\RadioButtonListDataEditor.cs" />
-    <Compile Include="DataEditors\UmbracoEntityPicker\UmbracoEntityPicker-Constants.cs" />
-    <Compile Include="DataEditors\UmbracoEntityPicker\UmbracoEntityPickerDataEditor.cs" />
-    <Compile Include="DataEditors\UmbracoEntityPicker\UmbracoEntityPickerConfigurationEditor.cs" />
-    <Compile Include="DataEditors\UmbracoEntityPicker\UmbracoEntityPickerModel.cs" />
-    <Compile Include="DataEditors\UmbracoEntityPicker\UmbracoEntityPickerValueConverter.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerModel.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerValueConverter.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerDataEditor.cs" />
@@ -347,8 +343,6 @@
     <Content Include="Web\UI\App_Plugins\Contentment\data-editors\notes.html" />
     <Content Include="Web\UI\App_Plugins\Contentment\data-editors\dropdown-list.js" />
     <Content Include="Web\UI\App_Plugins\Contentment\data-editors\dropdown-list.html" />
-    <Content Include="Web\UI\App_Plugins\Contentment\data-editors\umb-entity-picker.html" />
-    <Content Include="Web\UI\App_Plugins\Contentment\data-editors\umb-entity-picker.js" />
     <Content Include="Web\UI\App_Plugins\Contentment\data-editors\macro-picker.html" />
     <Content Include="Web\UI\App_Plugins\Contentment\data-editors\macro-picker.js" />
     <Content Include="Web\UI\App_Plugins\Contentment\data-editors\data-table.html" />
